# DA2

./: .gitignore  CMakeLists.txt  Doxyfile
dataset/output/: allocation1.txt  allocation2.txt  allocation3.txt  allocation7.txt  (+3 more)
html/: AllocationConfig_8h.html  AllocationConfig_8h.js  AllocationConfig_8h_source.html  AllocationResult_8h.html  AllocationResult_8h.js  AllocationResult_8h_source.html  Graph_8h.html  Graph_8h_source.html  InterferenceGraphBuilder_8cpp.html  InterferenceGraphBuilder_8h.html  InterferenceGraphBuilder_8h.js  InterferenceGraphBuilder_8h_source.html  LiveRange_8h.html  LiveRange_8h.js  LiveRange_8h_source.html  Menu_8cpp.html  Menu_8h.html  Menu_8h_source.html  OutputWriter_8cpp.html  OutputWriter_8h.html  OutputWriter_8h_source.html  ProgramPoint_8h.html  ProgramPoint_8h_source.html  RangeParser_8cpp.html  RangeParser_8h.html  RangeParser_8h.js  RangeParser_8h_source.html  RegisterAllocator_8cpp.html  RegisterAllocator_8h.html  RegisterAllocator_8h.js  RegisterAllocator_8h_source.html  RegisterParser_8cpp.html  RegisterParser_8h.html  RegisterParser_8h.js  RegisterParser_8h_source.html  WebBuilder_8cpp.html  WebBuilder_8h.html  WebBuilder_8h.js  WebBuilder_8h_source.html  Web_8h.html  (+146 more)
include/: AllocationConfig.h  AllocationResult.h  Graph.h  InterferenceGraphBuilder.h  LiveRange.h  Menu.h  OutputWriter.h  ProgramPoint.h  RangeParser.h  RegisterAllocator.h  RegisterParser.h  Web.h  WebBuilder.h
src/: InterferenceGraphBuilder.cpp  Menu.cpp  OutputWriter.cpp  RangeParser.cpp  RegisterAllocator.cpp  RegisterParser.cpp  WebBuilder.cpp  main.cpp
(+45 files in other folders)
